--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="140dp">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/home_vp"
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:text="图片对应的标题"
                 android:textColor="@android:color/white"/>
-    <!--
+
             <LinearLayout
                 android:layout_marginRight="10dp"
                 android:gravity="center"
@@ -32,11 +32,9 @@
                 android:id="@+id/home_ll_pointcontainer"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"/>
 
-            </LinearLayout>-->
-
-            <RelativeLayout
+<!--            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -50,15 +48,15 @@
                     android:orientation="horizontal"/>
 
 
-                <!-- 当前选中的点 -->
-                <!-- android:layout_marginLeft="20dp"可以控制点的移动 -->
+                &lt;!&ndash; 当前选中的点 &ndash;&gt;
+                &lt;!&ndash; android:layout_marginLeft="20dp"可以控制点的移动 &ndash;&gt;
 
                 <ImageView
                     android:id="@+id/home_iv_selected_point"
                     android:layout_width="10dp"
                     android:layout_height="10dp"
                     android:background="@drawable/point_pressed_guide" />
-            </RelativeLayout>
+            </RelativeLayout>-->
 
         </RelativeLayout>
 
