--- a/app/src/main/res/layout/cardview_detail.xml
+++ b/app/src/main/res/layout/cardview_detail.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,6 +8,7 @@
     tools:showIn="@layout/activity_detail">
 
     <LinearLayout
+        android:padding="5dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
