--- a/app/src/main/res/layout/radiogroup.xml
+++ b/app/src/main/res/layout/radiogroup.xml
@@ -12,7 +12,7 @@
     android:id="@+id/rg"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     android:orientation="horizontal"
     tools:showIn="@layout/activity_main"
     >
