--- a/app/src/main/res/layout/item_recyc_grid.xml
+++ b/app/src/main/res/layout/item_recyc_grid.xml
@@ -4,33 +4,33 @@
              android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:elevation="10dp"
-        >
+        android:layout_margin="10dp"
+        android:elevation="10dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp">
+            >
 
             <ImageView
                 android:id="@+id/iv_cardview"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ic_icon"/>
+                android:src="@mipmap/icon_item"/>
 
             <TextView
+                android:layout_alignBottom="@id/iv_cardview"
+                android:layout_centerHorizontal="true"
                 android:id="@+id/tv_cardview"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_cardview"
-                android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="text 1"
-                android:textSize="20sp"/>
+                android:textColor="@android:color/black"
+                android:textSize="18sp"/>
 
         </RelativeLayout>
 
