--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,17 +5,22 @@
         <!-- Customize your theme here. -->
         <!--对应ActionBar的颜色-->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <!--对应状态栏的颜色-->
+        <!--对应顶部状态栏的颜色-->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <!--对应EditText编辑时、RadioButton选中、CheckBox等选中时的颜色-->
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <!--对应底部状态栏的颜色-->
+        <!--<item name="android:navigationBarColor" tools:targetApi="lollipop">@android:color/transparent</item>-->
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="radioButton">
